--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Receta</title>
-    <link rel="stylesheet" href="omelet.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="public/favicon-32x32.png" />
   </head>
   <body>
